# evanOS

./: CMakeLists.txt  README.md
include/core/: configuration.h  gpu_monitor.h  logging.h  system_monitor.h
include/i18n/: internationalization.h
include/ui/: console_ui.h  display_utils.h
include/utils/: command_line.h  string_utils.h
src/core/: configuration.cpp  gpu_monitor.cpp  logging.cpp  main.cpp  system_monitor.cpp
src/i18n/: internationalization.cpp
src/ui/: console_ui.cpp  display_utils.cpp
src/utils/: command_line.cpp  string_utils.cpp
